--- a/_static/style.css
+++ b/_static/style.css
@@ -1,6 +1,6 @@
 
-    
-    
+
+
 /* BEGIN Pygments stuff */
 
 /* make sure there are no borders */
@@ -13,21 +13,27 @@ table.highlighttable td, table.highlighttable tr { padding: 0; margin: 0; border
 /* make it as wide as the container */
 /* we skip .code-container because we're doing differrent stuff for it below */
 table.highlighttable:not(.code-container) { width: 100%; }
-.highlighttable td.linenos { width: .1%; }
+table.highlighttable td.linenos { width: .1%; }
 
 /* adjust margins to make it look nice */
-table.highlighttable td.linenos code { 
-    padding-left: .8rem; 
+table.highlighttable td.linenos code {
+    padding-left: .8rem;
     padding-right: .0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
-table.highlighttable td.code code { 
+table.highlighttable td.code code {
     padding-left: .7rem;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
 
+/* the margin-bottom of the element above does not collapse
+ * with the margin-top of the pre, because of the display property
+ * of the table and the table-specific elements within it.
+ * it's easiest to just remove the additional margin-top of the pre,
+ * since we rely on the the margin of the element above anyway. */
+table.highlighttable:not(:first-child) pre { margin-top: 0; }
 
 /* HACK: should not hardcode the colors */
 
@@ -59,7 +65,7 @@ table.highlighttable td.linenos code { color: #bcc3ce; }
 /* tested with a <div class="column col-sm-12 col-md-10 col-8"> parent */
 
 /* no media */
-/* reverse .col-8: 100 / 8 * 12 = 150 */ 
+/* reverse .col-8: 100 / 8 * 12 = 150 */
 .code-container { width: 150%; }
 
 @media (max-width: 840px) {
@@ -73,10 +79,16 @@ table.highlighttable td.linenos code { color: #bcc3ce; }
 }
 
 
+/* for some reason, <p> has margin-bottom 1.2rem, while <pre> has .8rem,
+ * causing a <p> between two <pre>s to look like it belongs to the top <pre>;
+ * we make the two margins equal. */
+pre { margin-bottom: 1.2rem; }
+
+
 /* fix <li> containing <p> resulting in a newline after the marker box */
-ol, ul { 
+ol, ul {
     list-style-position: outside;
-    margin-left: 1.5rem; 
+    margin-left: 1.5rem;
 }
 
 
@@ -116,7 +128,7 @@ code, pre > code { font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo
 
 
 
-/* add some margin to the top */ 
+/* add some margin to the top */
 .main {
     padding-top: 2rem;
 }
@@ -133,7 +145,7 @@ code, pre > code { font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo
     min-height: calc(var(--vh, 1vh) * 100);
 }
 .content {
-    flex: 1 0 auto; 
+    flex: 1 0 auto;
 }
 }
 
