--- a/_static/style.css
+++ b/_static/style.css
@@ -55,42 +55,16 @@ table.highlighttable td.linenos code { color: #bcc3ce; }
     margin-bottom: 1.2rem;
 }
 
-
-/* .code-label is a custom class applied to the outermost
- * <pre> parent that's a direct child of the column;
- * depending on where it comes from, it can be table.highlighttable,
- * div.highlight, or pre. We could use selectors like "pre:not(.highlight pre)",
- * but having an explicit class for this makes it cleaner. */
-
-/* tested with a <div class="column col-sm-12 col-md-10 col-8"> parent */
-
-/* no media */
-/* reverse .col-8: 100 / 8 * 12 = 150 */
-.code-container { width: 150%; }
-
-@media (max-width: 840px) {
-    /* .reverse .col-md-10: 100 / 10 * 12 = 120 */
-    .code-container { width: 120%; }
-}
-
-@media (max-width: 600px) {
-    /* reverse .col-sm-12 */
-    .code-container { width: 100%; }
-}
-
-
 /* for some reason, <p> has margin-bottom 1.2rem, while <pre> has .8rem,
  * causing a <p> between two <pre>s to look like it belongs to the top <pre>;
  * we make the two margins equal. */
 pre { margin-bottom: 1.2rem; }
-
 
 /* fix <li> containing <p> resulting in a newline after the marker box */
 ol, ul {
     list-style-position: outside;
     margin-left: 1.5rem;
 }
-
 
 /* END Spectre improvements */
 
@@ -147,5 +121,35 @@ code, pre > code { font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo
 .content {
     flex: 1 0 auto;
 }
+
+
+/* .code-label is a custom class applied to the outermost
+ * <pre> parent that's a direct child of the column;
+ * depending on where it comes from, it can be table.highlighttable,
+ * div.highlight, or pre. We could use selectors like "pre:not(.highlight pre)",
+ * but having an explicit class for this makes it cleaner. */
+
+/* tested with a <div class="column col-sm-12 col-md-10 col-8"> parent */
+
+/* no media */
+/* reverse .col-8: 100 / 8 * 12 = 150 */
+.code-container { width: 150%; }
+
+@media (max-width: 840px) {
+    /* .reverse .col-md-10: 100 / 10 * 12 = 120 */
+    .code-container { width: 120%; }
 }
+
+@media (max-width: 600px) {
+    /* reverse .col-sm-12 */
+    .code-container { width: 100%; }
+}
+
+
+/* make code blocks scroll, instead of scrolling the whole page */
+.code-container {
+    display: block;
+    overflow-x: auto;
+}
+
 
